fix overflow

--- a/styles/components/ticker.module.scss
+++ b/styles/components/ticker.module.scss
@@ -57,6 +57,7 @@
                 padding: 0 70px;
                 margin-bottom: 0;
                 line-height: 0.8;
+                overflow: hidden;
             }
         }
     }
